--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -12,6 +12,10 @@
 % FONT SELECTION -> WE NOW USE UBUNTU FONT AND XETEX FOR A MORE PROFESSIONAL
 % LOOK.
 % UBUNTU FONT CAN BE DOWNLOADED FROM HERE: http://font.ubuntu.com
+% THEY SHOULD ALSO BE INCLUDED IN THE REPOSITORY.
+% WE TRIED TO USE RELATIVE PATHS BUT IT DOES NOT SEEM TO ALWAYS WORK
+% WITH THE FONTSPEC PACKAGE. THEREFORE PLEASE INSTALL THE FONTS WITH THE
+% METHODS FOR YOUR OS BEFORE COMPILING.
 %
 \usepackage{fontspec}
 
