--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -273,7 +273,7 @@ Combining ID and Quantification table into a single table is again achieved usin
 \end{figure}
 
 \begin{question}
-What happens if we use an \textit{Left Outer Join}, \textit{Right Outer Join} or \textit{Full Outer Join} instead of the \textit{Inner Join}?
+What happens if we use a \textit{Left Outer Join}, \textit{Right Outer Join} or \textit{Full Outer Join} instead of the \textit{Inner Join}?
 \end{question}
 
 \begin{task}
